1.4.4 - TBD

* Plugins can now modify the main window tabs.
* Added banner rendering.
* Improve bed rendering for Minecraft 1.12 (colored beds).
* Y clipping is now a per-scene setting, with an upper clip value.
* The Y clip planes now cull non-player entities.

1.4.3 - 2017-07-22

* Various small UI improvements and bug fixes.
* Improved the way fences, stone walls, glass panes, and iron bars
  connect to other blocks.
* Added plugin manager in the launcher, among the advanced settings.
* The Plugin API now expects plugins to provide metadata.
* Made resource pack loading more flexible.
* Fog is now blended with the sky near the horizon.
* Minecraft block IDs are now displayed in the block info tooltip.
* Improved error handling for skymap loading.
    * Added -f option to ignore headless skymap loading errors.
* Fixed incorrect top texture for inverted daylight sensors.
* Added rendering for Minecraft 1.12 blocks:
    * Glazed Terracotta
    * Concrete
    * Concrete Powder
    * Beetroots
* Made block material properties configurable per-scene.
* Modified specular reflection rendering.
* Added two new post-processors
    * Hable tone mapping
    * ACES filmic tone mapping

1.4.2 - 2017-01-15

* Added support for multiple resource packs. The resource pack
  load order can be changed via Options->Edit resource packs.
* Added rendering for Minecraft 1.11 blocks:
    * Observer Block
    * Shulker Box
* Added scene settings export/import system.
* It is now possible to temporarily change the view target via the
  render preview context menu. This is useful for autofocus and moving
  entities.
* Updated command block rendering to be compatible with Minecraft 1.9+.
* Added scale setting for player entities.
* Improved error checking for resource packs.
* Fixed rendering errors for trapdoors, redstone dust, and comparator blocks.
* The --update command now creates a settings directory if needed.